自定义按钮

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile 'com.zcw:togglebutton-library:1.0.0'
 }
